# prefer.rs

./: .projections.json  Cargo.toml  LICENSE  README.md  codecov.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs  watch.rs
prefer/: Cargo.toml
prefer/examples/: basic.rs  derive.rs  sources.rs  watch.rs
prefer/src/: builder.rs  config.rs  discovery.rs  error.rs  events.rs  formats.rs  lib.rs  registry.rs  source.rs  value.rs  visitor.rs  watch.rs
prefer/src/formatter/: ini.rs  json.rs  mod.rs  toml.rs  xml.rs  yaml.rs
prefer/src/loader/: db.rs  file.rs  mod.rs
prefer/tests/: coverage_tests.rs  derive_test.rs  integration_test.rs  no_std_test.rs  registry_test.rs
prefer/tests/fixtures/: test.ini  test.json  test.json5  test.toml  test.xml  test.yaml
prefer_derive/: Cargo.toml
prefer_derive/src/: lib.rs
src/: config.rs  discovery.rs  error.rs  formats.rs  lib.rs  watch.rs
tests/: integration_test.rs
tests/fixtures/: test.ini  test.json  test.json5  test.toml  test.xml  test.yaml
