[package]
name = "prefer"
version = "0.3.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A lightweight library for managing application configurations with support for multiple file formats"
keywords = ["config", "configuration", "settings", "yaml", "json"]
categories = ["config", "filesystem"]
readme = "../README.md"

[dependencies]
# Error handling (minimal for no_std)
thiserror = { version = "1.0", optional = true }

# Async runtime (std only)
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

# Format parsers (std only, no serde required)
jzon = { version = "0.12", optional = true }
yaml-rust2 = { version = "0.8", optional = true }
toml_edit = { version = "0.22", optional = true }

# File watching (std only)
notify = { version = "6.1", optional = true }

# Platform-specific path handling (std only)
dirs = { version = "5.0", optional = true }

# Optional format support (std only, no serde)
roxmltree = { version = "0.20", optional = true }
rust-ini = { version = "0.20", optional = true }

# Derive macro (works in no_std)
prefer_derive = { version = "0.3.3", path = "../prefer_derive", optional = true }

[features]
default = ["std", "xml", "ini"]
# Core std support - enables all I/O, async, and format parsing
std = [
    "dep:thiserror",
    "dep:tokio",
    "dep:async-trait",
    "dep:jzon",
    "dep:yaml-rust2",
    "dep:toml_edit",
    "dep:notify",
    "dep:dirs",
]
json5 = ["std"]  # JSON5 features handled by jzon fallback
xml = ["std", "dep:roxmltree"]
ini = ["std", "dep:rust-ini"]
derive = ["dep:prefer_derive"]
all = ["std", "xml", "ini", "derive"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
prefer_derive = { version = "0.3.3", path = "../prefer_derive" }
serial_test = "3.0"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "watch"
path = "examples/watch.rs"

[[example]]
name = "derive"
path = "examples/derive.rs"
required-features = ["derive"]

[[example]]
name = "sources"
path = "examples/sources.rs"
