[package]
name = "prefer_derive"
version = "0.3.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for the prefer configuration library"
keywords = ["config", "configuration", "derive", "macro"]
categories = ["config", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
